# Embedded_Linux_tasks

Bash/: task4.sh
Bash/mini-project-tasks-manager/: task_manager.sh
C++/: Fruit_Struct.cpp  Lambda_cbk_Task.cpp  Student_class.cpp  Task5.cpp  Task6.cpp
C++/Containers/: Linked_List.cpp  List  strategy  strategy.cpp
C++/Design_Patterns/: main
C++/Design_Patterns/Observer/: Observer.cpp
C++/Design_Patterns/Proxy/: SubjectProxy.cpp
C++/OPP/: Employee.cpp  Employee.h  inline.cpp  main  salary_Calculator.cpp  salary_Calculator.h
C++/OPP/Calculator/: Calcularor.cpp  Calculator.cpp  Calculator.h
C++/OPP/Perosn/: Person.cpp  Person.h
C++/OPP/Point_Class/: Point.cpp  Point.h  point
C++/OPP/Polymorphism/: Animal  Animal.cpp  device.cpp
C++/OPP/Record/: Record  Record.cpp  Record.drawio  main
C++/OPP/Static/: Oven.h  application.cpp  static_fun  static_fun.cpp
C++/OPP/Strategy_class/: Strategy.cpp  Strategy.drawio
C++/OPP/composition/: comp  composite.cpp  window.cpp
C++/STL/: map  map.cpp
C++/generic/: Stack_imp.h  template_function.cpp
C++/generic/Find_Function/: Find.cpp  find
C++/generic/Pages/: Composite.drawio  Pages.cpp
C++/generic/Stack/: Stack_imp.h  main  main.cpp
C++/generic/Template/: template_function.cpp
C++/smart_pointers/: GasStation_Uniqueptr.cpp  moveSemantics.cpp  pointer  smart_pointer.cpp  station
C++/smart_pointers/Car_engine/: Car.cpp  Car.drawio  Car.h  Engine.h  car  v7Engine.h  v8Engine.cpp  (+1 more)
Make files/: Date.cpp  Date.h  makefile1.mk  testDate.cpp  testdate
Vector/: CMakeLists.txt
Vector/src/: Vector.h  Vector.tpp
Vector/tests/: A_struct.h  VectorDoubleTest.cpp  VectorIntTest.cpp  VectorStringTest.cpp  main.cpp
Vector_misra/: Makefile  main  vector_test.cpp
Weather_Forecast/: CurlClass.d  DataClass.d  Makefile  RapidjsonClass.d  main.d
Weather_Forecast/include/: CurlInterface.h  DataInterface.h  RapidjasonInterface.h  citiesjson.h  main.h
Weather_Forecast/src/: CurlClass.cpp  DataClass.cpp  RapidjsonClass.cpp  main.cpp
concurrency/: detach.cpp  fanctor.cpp  main  threads.cpp
future_promise/: future.cpp
gtest/CarEngineTest/: CMakeLists.txt  IEngine.h  car.cpp  car.h  car_test.cpp  engine_mock.h  main.cpp  readme.md
gtest/gtest_try/: CMakeLists.txt  tests.cpp
test_misra/: CMakeLists.txt  app.cpp
(+3 files in other folders)
